{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 58,
  "lineage": "c0f548f2-d17f-8dea-33ee-12b1ecd9c3b6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e731c8a588258d0d",
            "arn": "arn:aws:ec2:us-east-1:721685688693:instance/i-0f19a544f926e7eeb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f19a544f926e7eeb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-056dff29601b1dcfc",
            "private_dns": "ip-10-10-0-189.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.189",
            "public_ip": "18.204.228.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00059d0b4977a5244",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03194ae3321cf6d38",
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.7.0",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Santiago"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b577af30e658a1f"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721685688693:internet-gateway/igw-0d9284137bb181fa6",
            "id": "igw-0d9284137bb181fa6",
            "owner_id": "721685688693",
            "tags": {
              "Name": "igw vpc virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.7.0",
              "Name": "igw vpc virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Santiago"
            },
            "vpc_id": "vpc-0f430df114a56fa8b"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721685688693:route-table/rtb-06f52e0205cdc8295",
            "id": "rtb-06f52e0205cdc8295",
            "owner_id": "721685688693",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d9284137bb181fa6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public crt"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.7.0",
              "Name": "public crt",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Santiago"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f430df114a56fa8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0308be86a06d5e884",
            "route_table_id": "rtb-06f52e0205cdc8295",
            "subnet_id": "subnet-03194ae3321cf6d38"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_crt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721685688693:security-group/sg-06b577af30e658a1f",
            "description": "Allow SSH inbound traffic and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b577af30e658a1f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH over Internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Public Instance SG",
            "name_prefix": "",
            "owner_id": "721685688693",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Instance SG"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.7.0",
              "Name": "Public Instance SG",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Santiago"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f430df114a56fa8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721685688693:subnet/subnet-0ebcc958e09636e46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebcc958e09636e46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721685688693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.7.0",
              "Name": "private_subnet",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Santiago"
            },
            "vpc_id": "vpc-0f430df114a56fa8b"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721685688693:subnet/subnet-03194ae3321cf6d38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03194ae3321cf6d38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "721685688693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.7.0",
              "Name": "public_subnet",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Santiago"
            },
            "vpc_id": "vpc-0f430df114a56fa8b"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721685688693:vpc/vpc-0f430df114a56fa8b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0eef3440491e487a6",
            "default_route_table_id": "rtb-00db27b114ad53b59",
            "default_security_group_id": "sg-0797f25b2483f3c5d",
            "dhcp_options_id": "dopt-0a4d62cffb1bd6c11",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f430df114a56fa8b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00db27b114ad53b59",
            "owner_id": "721685688693",
            "tags": {
              "Name": "vpc_virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.7.0",
              "Name": "vpc_virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Santiago"
            }
          }
        }
      ]
    }
  ]
}